fix: minor fixed for heading spacing

--- a/app/_components/SetsList/SetsList.module.css
+++ b/app/_components/SetsList/SetsList.module.css
@@ -3,14 +3,14 @@
 }
 
 .article:not(:first-of-type) {
-  margin-block-start: 1.5rem;
+  margin-block-start: 1rem;
 }
 
 .article > h2 {
   color: var(--primary);
   font-size: 1.25rem;
   font-weight: bold;
-  margin-block-end: 0.75rem;
+  margin-block: 0 0.125rem;
   margin-inline-start: 0.75rem;
   width: fit-content;
 }
