--- a/app/_components/WordScreen/WordScreen.module.css
+++ b/app/_components/WordScreen/WordScreen.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  gap: 0.5rem;
   height: 100%;
   text-align: center;
   animation: fadein 0.7s ease;
