--- a/app/globals.css
+++ b/app/globals.css
@@ -147,17 +147,17 @@ h1 {
 
 h2 {
   font-size: 2rem;
-  line-height: 2.5rem;
+  line-height: 2.375rem;
 }
 
 h3 {
   font-size: 1.5rem;
-  line-height: 2rem;
+  line-height: 1.875rem;
 }
 
 h4 {
   font-size: 1.25rem;
-  line-height: 1.75rem;
+  line-height: 1.5rem;
 }
 
 p {
